texi2html/test/invalid/res/texi_style_not_closed_in_table_line/style_not_closed_in_table_line.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename style_not_closed_in_table_line.info

@node Top
@top Test command not closed on table line

@table @asis
@item first item
line
line @code{in code @item in item
@end table

@bye
